# mofu

./: Cargo.toml  README.md  flake.nix
mongo-nfs/: Cargo.toml
mongo-nfs/src/: config.rs  db.rs  main.rs  vfs.rs
mongo-nfs/src/db/: attribute.rs  bucket.rs  chunk.rs  mod.rs  time.rs  util.rs
mongo-nfs/src/vfs/: fileid.rs  mod.rs  mongorw.rs  mountpoint.rs
