[package]
name = "mongo-nfs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
bimap = "0.6.3"
clap = { version = "4.5.4", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.30"
itertools = "0.13.0"
mongodb = "2.8.2"
nfsserve = "0.10.2"
rayon = "1.10.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
pretty_assertions = "1.4.0"
